# rl_double_descent

./: .gitignore  README.md  planning.md  pyproject.toml
scripts/: mean_optimal_return.py  run_experiment.slurm
src/rl_dd/: __init__.py  dqn.py  env.py  eval.py  experiment.py  explore.ipynb  train.py  trpo.py
tex/: main.bib  references.bib  symposium.tex  unused.bib
tex/symposium/: symposium.tex
tex/thesis/: Makefile  bachelorproject.sty  bachelorthesis.tex  feedback.md  literature_bachelorthesis.bib  thesis.tex
tex/thesis/tex/: 0_abstract.tex  1_introduction.tex  2_methods.tex  3_results.tex  4_discussion.tex  5_limitations_future_work.tex  6_conclusion.tex  abstract.tex  appendixAbsoluteFIM.tex  appendixB.tex  appendixDQN.tex  appendixHyperparameters.tex  appendixLongRuns.tex  appendixReturns.tex  appendixTRPO.tex  conclusion.tex  conclusions.tex  discussion.tex  future_work.tex  introduction.tex  limitations_future_work.tex  methods.tex  results.tex
