[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rl-double-descent"
version = "0.1.0"
description = "DQN double descent study on seeded gridworlds."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29.1",
  "matplotlib>=3.7.0",
  "numpy>=1.24.0",
  "pillow>=10.0.0",
  "torch>=2.1.0",
  "tqdm>=4.66.0",
  "pandas",
  "ipykernel",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rl_dd"]
